@@ -3,26 +3,26 @@ package kitchenpos;
 import java.math.BigDecimal;
 import java.time.LocalDateTime;
 import java.util.Arrays;
+import java.util.List;
 import java.util.Random;
 import java.util.UUID;
+import kitchenpos.common.Price;
 import kitchenpos.menu.tobe.domain.Menu;
-import kitchenpos.menu.tobe.domain.MenuPrice;
 import kitchenpos.menu.tobe.domain.MenuProduct;
 import kitchenpos.menu.tobe.domain.MenuProducts;
 import kitchenpos.menugroup.domain.MenuGroup;
 import kitchenpos.order.deliveryorder.domain.DeliveryOrder;
 import kitchenpos.order.deliveryorder.domain.DeliveryOrderLineItem;
 import kitchenpos.order.deliveryorder.domain.DeliveryOrderStatus;
-import kitchenpos.order.eatinorder.domain.EatInOrder;
-import kitchenpos.order.eatinorder.domain.EatInOrderLineItem;
-import kitchenpos.order.eatinorder.domain.EatInOrderStatus;
-import kitchenpos.order.eatinorder.ordertable.domain.OrderTable;
 import kitchenpos.order.takeoutorder.domain.TakeOutOrder;
 import kitchenpos.order.takeoutorder.domain.TakeOutOrderLineItem;
 import kitchenpos.order.takeoutorder.domain.TakeOutOrderStatus;
+import kitchenpos.order.tobe.eatinorder.domain.EatInOrder;
+import kitchenpos.order.tobe.eatinorder.domain.EatInOrderLineItem;
+import kitchenpos.order.tobe.eatinorder.domain.EatInOrderStatus;
+import kitchenpos.order.tobe.eatinorder.domain.OrderTable;
 import kitchenpos.product.tobe.domain.Product;
 import kitchenpos.product.tobe.domain.ProductName;
-import kitchenpos.product.tobe.domain.ProductPrice;
 
 public class Fixtures {
 
@@ -37,14 +37,14 @@ public class Fixtures {
     }
 
     public static Menu menu(final long price, final boolean displayed, final MenuProduct... menuProducts) {
-        return new Menu(UUID.randomUUID(), "후라이드+후라이드", new MenuPrice(BigDecimal.valueOf(price)), menuGroup().getId(),
+        return new Menu(UUID.randomUUID(), "후라이드+후라이드", new Price(BigDecimal.valueOf(price)), menuGroup().getId(),
             displayed, Arrays.asList(menuProducts));
     }
 
     public static Menu hideMenu(final long price, final MenuProduct... menuProducts) {
         Menu menu = menu(price, false, menuProducts);
         BigDecimal expensivePrice = BigDecimal.valueOf(price).subtract(BigDecimal.ONE);
-        menu.changeMenuProductPrice(menuProducts[0].getProductId(), MenuPrice.of(expensivePrice));
+        menu.changeMenuProductPrice(menuProducts[0].getProductId(), Price.of(expensivePrice));
 
         return menu;
     }
@@ -66,7 +66,7 @@ public class Fixtures {
     }
 
     public static MenuProduct menuProduct(final long price, final long quantity) {
-        return new MenuProduct(UUID.randomUUID(), new ProductPrice(BigDecimal.valueOf(price)), quantity);
+        return new MenuProduct(UUID.randomUUID(), new Price(BigDecimal.valueOf(price)), quantity);
     }
 
     public static MenuProduct menuProduct(final Product product, final long quantity) {
@@ -83,23 +83,11 @@ public class Fixtures {
     }
 
     public static EatInOrder eatInOrder(final EatInOrderStatus status) {
-        final EatInOrder eatInOrder = new EatInOrder();
-        eatInOrder.setId(UUID.randomUUID());
-        eatInOrder.setStatus(status);
-        eatInOrder.setOrderDateTime(LocalDateTime.of(2020, 1, 1, 12, 0));
-        eatInOrder.setOrderLineItems(Arrays.asList(eatInOrderLineItem()));
-        return eatInOrder;
+        return new EatInOrder(status, LocalDateTime.of(2020, 1, 1, 12, 0), List.of(eatInOrderLineItem()), UUID.randomUUID());
     }
 
     public static EatInOrder eatInOrder(final EatInOrderStatus status, final OrderTable orderTable) {
-        final EatInOrder eatInOrder = new EatInOrder();
-        eatInOrder.setId(UUID.randomUUID());
-        eatInOrder.setStatus(status);
-        eatInOrder.setOrderTable(orderTable);
-        eatInOrder.setOrderTableId(orderTable.getId());
-        eatInOrder.setOrderDateTime(LocalDateTime.of(2020, 1, 1, 12, 0));
-        eatInOrder.setOrderLineItems(Arrays.asList(eatInOrderLineItem()));
-        return eatInOrder;
+        return new EatInOrder(status, LocalDateTime.of(2020, 1, 1, 12, 0), List.of(eatInOrderLineItem()), orderTable.getId());
     }
 
     public static DeliveryOrder deliveryOrder(final DeliveryOrderStatus status, final String deliveryAddress) {
@@ -136,23 +124,16 @@ public class Fixtures {
     }
 
     public static EatInOrderLineItem eatInOrderLineItem() {
-        final EatInOrderLineItem orderLineItem = new EatInOrderLineItem();
-        orderLineItem.setSeq(new Random().nextLong());
-        orderLineItem.setMenu(menu());
-        return orderLineItem;
+        Menu menu = menu();
+        return new EatInOrderLineItem(1, menu.getId(), Price.of(menu.getPrice()));
     }
 
-    public static OrderTable orderTable() {
+    public static OrderTable emptyOrderTable() {
         return orderTable(false, 0);
     }
 
     public static OrderTable orderTable(final boolean occupied, final int numberOfGuests) {
-        final OrderTable orderTable = new OrderTable();
-        orderTable.setId(UUID.randomUUID());
-        orderTable.setName("1번");
-        orderTable.setNumberOfGuests(numberOfGuests);
-        orderTable.setOccupied(occupied);
-        return orderTable;
+        return new OrderTable(UUID.randomUUID(), "1번", numberOfGuests, occupied);
     }
 
     public static Product product() {
